kubernetes/alert_system.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-system-deployment
  labels:
    app: alert-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert-system
  template:
    metadata:
      labels:
        app: alert-system
    spec:
      restartPolicy: Always
      containers:
        - name: alert-system
          image: alert-system:latest
          imagePullPolicy: Never
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 50m
              memory: 64Mi
