kubernetes/data_collector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-collector-deployment
  labels:
    app: data-collector-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-collector
  template:
    metadata:
      labels:
        app: data-collector
    spec:
      restartPolicy: Always
      containers:
        - name: data-collector
          image: data-collector:latest # dare questo nome all'immagine
          imagePullPolicy: Never # da tenere così in produzione e scambiare con IfNotPresent quando sarà pronta
          ports:
            - name: api-port
              containerPort: 5002
            - name: metrics-port
              containerPort: 9999
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
kind: Service
apiVersion: v1
metadata:
  name: data-collector-service
  labels:
    app: data-collector-service
spec:
  ports:
    - name: api-port
      protocol: TCP
      port: 80 # porta del servizio
      targetPort: 5002 # porta esposta dal container
    - name: metrics-port
      protocol: TCP
      port: 9999 # porta del servizio
      targetPort: 9999 # porta esposta dal container
  selector:
    app: data-collector
