kubernetes/data_db.yaml
# mongo .yaml completo di persistenza
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-db-deployment
  labels:
    app: data-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-db
  template:
    metadata:
      labels:
        app: data-db
    spec:
      containers:
        - name: data-db
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
            - name: init-script-volume
              mountPath: /docker-entrypoint-initdb.d/init_data_db.sql
              subPath: init_data_db.sql

          # Sostituto del Healthcheck di Docker Compose
          livenessProbe:
            exec:
              command: [ "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p$(MYSQL_ROOT_PASSWORD)" ]
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command: [ "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p$(MYSQL_ROOT_PASSWORD)" ]
            initialDelaySeconds: 10
            periodSeconds: 5

      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: data-db-pvc
        - name: init-script-volume
          configMap:
            name: data-db-init-script # ConfigMap

---
apiVersion: v1
kind: Service
metadata:
  name: data-db-service
spec:
  selector:
    app: data-db
  ports:
    - protocol: TCP
      port: 3306 # porta esposta dal servizio
      targetPort: 3306 # porta esposta dal container
