kubernetes/mailhog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
        - name: mailhog
          image: mailhog/mailhog:latest
          ports:
            - containerPort: 1025 # Porta SMTP
            - containerPort: 8025 # Porta UI Web
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 50m
              memory: 64Mi

---
apiVersion: v1
kind: Service
metadata:
  name: mailhog-service
spec:
  type: NodePort
  selector:
    app: mailhog
  ports:
    - name: smtp
      protocol: TCP
      port: 1025
      targetPort: 1025
    - name: ui
      protocol: TCP
      port: 8025
      targetPort: 8025
      nodePort: 30025
