kubernetes/user_manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-manager-deployment
  labels:
    app: user-manager-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-manager
  template:
    metadata:
      labels:
        app: user-manager
    spec:
      restartPolicy: Always
      containers:
        - name: user-manager
          image: user-manager:latest # dare questo nome all'immagine
          imagePullPolicy: Never # da tenere così in produzione e scambiare con IfNotPresent quando sarà pronta
          ports:
            - name: api-port
              containerPort: 5003
            - name: metrics-port
              containerPort: 9999
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
kind: Service
apiVersion: v1
metadata:
  name: user-manager-service
  labels:
    app: user-manager-service
spec:
  ports:
    - name: api-port
      protocol: TCP
      port: 80 # porta del servizio
      targetPort: 5003 # porta esposta dal container
    - name: metrics-port
      protocol: TCP
      port: 9999 # porta del servizio
      targetPort: 9999 # porta esposta dal container
  selector:
    app: user-manager
