kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: "nginx"
  rules:
    - host: progettoeternograsso.com
      http:
        paths:
          - path: /api/users(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user_manager-service
                port:
                  number: 80 # questa è la porta 80 del servizio
          - path: /api/data(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: data_collector-service
                port:
                  number: 80 # questa è la porta 80 del servizio
